Require mailbase package as mail catcher. Configure mail sending when request resolved. Encapsulate role check in middleware.
