# app/Http/Controllers/RequestController.php
@@ -2,26 +2,35 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\Request\RequestCreateFormRequest;
+use App\Http\Requests\Request\RequestPutFormRequest;
 use App\Models\Role;
-use App\Models\User;
-use App\Repositories\RequestRepository;
+use App\Repositories\Request\RequestRepository;
+use App\Services\Request\RequestService;
 use Illuminate\Http\Request as HttpRequest;
 use Illuminate\Support\Facades\Response;
 
 class RequestController extends Controller
 {
+    private RequestService $requestService;
     private RequestRepository $requestRepository;
 
-    public function __construct(RequestRepository $requestRepository)
+    public function __construct(RequestRepository $requestRepository, RequestService $requestService)
     {
+        $this->requestService = $requestService;
         $this->requestRepository = $requestRepository;
+
+        $this->middleware('auth:sanctum');
+        $this->middleware('role:' . Role::CLIENT, ['only' => ['store']]);
+        $this->middleware('role:' . Role::EMPLOYEE, ['only' => ['index', 'update']]);
     }
 
     /**
-     * Get all requests.
-     * Only for client.
-     * @authenticated
+     * Get all requests
      *
+     * Only for employees.
+     * @authenticated
+     * @group Employee api
      * @queryParam sort_date string Sorting by created. Values: new, old.
      * @queryParam sort_status string Sorting by status. Values: active, resolved.
      * @queryParam start string Start of date filter. Values: Carbon compatible string.
@@ -36,24 +45,55 @@ class RequestController extends Controller
      */
     public function index(HttpRequest $httpRequest)
     {
-        /**
-         * @var $user User
-         */
-        $user = $httpRequest->user();
-        if ($user->role->type != Role::EMPLOYEE) abort(401,'Only for employees');
-        $sortDate = $httpRequest->get('sort_date', null);
-        $sortStatus = $httpRequest->get('sort_status', null);
-        $start = $httpRequest->get('start', null);
-        $end = $httpRequest->get('end', null);
-        $filterStatus = $httpRequest->get('filter_status', null);
+        $sortDate = $httpRequest->get('sort_date');
+        $sortStatus = $httpRequest->get('sort_status');
+        $start = $httpRequest->get('start');
+        $end = $httpRequest->get('end');
+        $filterStatus = $httpRequest->get('filter_status');
 
         $serviceRequests = $this->requestRepository->getAll($sortDate, $sortStatus, $start, $end, $filterStatus);
 
-        $result = [
+
+        return Response::json([
             'message' => 'OK',
             'data' => $serviceRequests
-        ];
-
-        return Response::json($result);
+        ]);
     }
+
+    /**
+     * Resolve request with comment
+     *
+     * Only for employee
+     * @authenticated
+     * @group Employee api
+     */
+    public function update(RequestPutFormRequest $httpRequest, int $id)
+    {
+        $data = $httpRequest->validated();
+        $requestId = $this->requestService->resolveRequest($id, $data['comment']);
+        return Response::json([
+            'message' => 'Resolved',
+            'data' => $requestId
+        ], 200);
+    }
+
+    /**
+     * Create new request
+     *
+     * Only for clients
+     * @authenticated
+     * @group Client api
+     */
+    public function store(RequestCreateFormRequest $httpRequest)
+    {
+        $user = $httpRequest->user();
+        $data = $httpRequest->validated();
+        $requestId = $this->requestService->createRequest($user, $data['message']);
+
+        return Response::json([
+            'message' => 'OK',
+            'data' => $requestId,
+        ], 201);
+    }
+
 }
