# routes/api.php
@@ -4,6 +4,10 @@ use App\Http\Controllers\AuthController;
 use App\Http\Controllers\RequestController;
 use Illuminate\Support\Facades\Route;
 
-Route::post('/register', [AuthController::class, 'register']);
+Route::post('/register-client', [AuthController::class, 'registerClient']);
+
+Route::post('/register-employee', [AuthController::class, 'registerEmployee']);
+
 Route::post('/login', [AuthController::class, 'login']);
-Route::middleware(['auth:sanctum'])->get('/requests', [RequestController::class, 'index']);
+
+Route::resource('/requests', RequestController::class)->only(['index', 'store', 'update']);
